# Python-Car-Game

./: .gitignore  .project  README.md  __init__.py  colour.py  constants.py  mygame.py  objects.py  pyproject.toml  pyracing.py
assets/: crate.xcf
src/: colour.py  objects.py  pyracing.py  schemas.py
src/game/: constants.py  loop.py  objects.py  schemas.py
