[tool.poetry]
name = "python-car-game"
version = "0.1.0"
description = ""
authors = ["Ryan Barnes <ryan.bayangan@gmail.com>"]
readme = "README.md"
packages = [{include = "python_car_game"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
