[project]
authors = [
    { name = "Ryan Barnes", email = "ryan.bayangan@gmail.com" },
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "pygame>=2.4.0,<3.0.0",
]
name = "python-car-game"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
pyracing = 'pyracing'

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "PLR",
    "D",
    "E501",
    "S104",
    "S311",
    "T201",
    "C901",
]
